tests/src/snapshots/fe_compiler_tests__compile_errors__pow_with_wrong_capacity.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: The right hand side of this operation must fit into the left
  ┌─ [snippet]:5:11
  │
5 │   base ** exp
  │           ^^^ size too large


